app/assets/stylesheets/components/markdown_to_html.scss
.doc_markdown_to_html {
  a {
    color: var(--background-action-high-blue-france);
  }

  h1, h2, table {
    margin-top: 24px;
    margin-bottom: 32px;
  }

  h3, h4 {
    margin-top: 16px;
    margin-bottom: 24px;
  }

  h5, h6 {
    margin-top: 12px;
    margin-bottom: 16px;
  }

  li {
    margin-top: 8px;
    margin-bottom: 8px;
  }


  td {
    border: 1px solid;
    padding: 5px;
  }

  pre {
    overflow: auto;
  }

  code {
    overflow: auto;
    display: inline-block;
    width: 100%;

    @media(max-width: 575px) {
      max-width: 33vw;
    }
  }
}

